--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -34,6 +34,7 @@
     position: absolute
     left: 5px
     bottom: -1.79rem
+    padding: 1.214rem 0
     width: 100%
     max-width: 16.28rem
     text-align: center
